<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/userSearch_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:paddingTop="10sp">
        <EditText
            android:id="@+id/mainUserSearch"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:padding="10sp"
            android:elevation="2sp"
            android:gravity="start"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:maxLines="1"
            android:inputType="text"
            android:enabled="false"
            android:hint="@string/your_search_is_shown_here"
            android:background="@drawable/user_search_final_edit_text"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/searchFAB"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            app:fabCustomSize="64sp"
            app:maxImageSize="56sp"
            app:elevation="15sp"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            app:backgroundTint="@color/darkBlue"
            android:src="@drawable/search_arrow"/>
    </RelativeLayout>

    <ScrollView
        android:layout_below="@id/userSearch_ll"
        android:layout_marginBottom="100sp"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <RelativeLayout
                    android:id="@+id/mainRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/userEditSearchText"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginBottom="10sp"
                        android:padding="20sp"
                        android:hint="@string/edit_your_search_query_here"
                        android:inputType="textMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/user_edit_search_text"/>

                    <TextView
                        android:id="@+id/identifiedTextLabel"
                        android:layout_below="@+id/userEditSearchText"
                        android:text="@string/detected_text_is_shown_below"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/colorPrimaryDark"
                        android:padding="5sp"
                        android:layout_margin="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/mainRecyclerView"
                        android:layout_below="@+id/identifiedTextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1">
                <TextSwitcher
                    android:id="@+id/hintTextSwitcher"
                    android:layout_margin="20sp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/darkGrayBlue"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/darkGrayBlue"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TextSwitcher>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/mainButton"
        android:contentDescription="@string/mainButton"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:background="@drawable/cornered_button_take_picture"
        android:layout_height="50sp"
        android:text="@string/capture"
        android:textColor="@color/white"
        android:textStyle="bold"/>
</RelativeLayout>